# Kafka

./: CMakeLists.txt  config.hpp
include/: CSVReader.hpp  ConsoleSender.hpp  KafkaController.hpp  KafkaSender.hpp  Sender.hpp
src/: CSVReader.cpp  ConsoleSender.cpp  KafkaController.cpp  KafkaSender.cpp  main.cpp
